--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3810,7 +3810,7 @@ input, select, textarea {
 				padding: 0;
 				text-align: center;
 				top: 0;
-				width: 75%;
+				width: 100%;
 			}
 
 				#sidebar > .inner {
@@ -3874,7 +3874,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/map.jpg");
+		background-image: url("images/intro.svg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
