Adjust BG Color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3913,7 +3913,7 @@ input, select, textarea {
 		justify-content: space-between;
 		align-items: center;
 		padding: 16px 24px;
-		background-color: #ffffff;
+		background-color: #312450;
 		border-bottom: 1px solid #e5e5e5;
 	}
 
