--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3523,7 +3523,7 @@ input, select, textarea {
 /* Sidebar */
 
 	#sidebar {
-		padding: 2.5em 1.5em 0.5em 1.5em ;
+		padding: 2.5em 1.5em 0.5em 1.8em ;
 		background: #312450;
 		cursor: default;
 		height: 100vh;
@@ -3531,7 +3531,7 @@ input, select, textarea {
 		overflow-x: hidden;
 		overflow-y: auto;
 		position: fixed;
-		text-align: right;
+		text-align: left;
 		top: 0;
 		width: 4.5em;
 		z-index: 10000;
